components/agility-pageModules/contentList/contentList.module.scss
@import "../../../styles/settings/mixins";
@import "../../../styles/settings/colors";

.contentList {
  .heading {
    padding: 2rem 0;
    text-align: center;
  }
  .items {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    .contentItem {
      width: 90vw;
      height: 100%;
      min-width: unset;
      max-width: 25rem;
      > * {
        max-width: calc(33% - 1.875rem);
      }
    }
    @include desktop() {
      display: grid;
      gap: 2rem;
      width: 100%;
      grid-template-columns: repeat(3, 1fr);
      .contentItem {
        width: initial;
        > * {
          max-width: calc(33% - 1.875rem);
        }
      }
    }
  }
}

